--- a/RetrivalManagement.GraphQL/appsettings.json
+++ b/RetrivalManagement.GraphQL/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionString": {
-    "RetrivalManagement": "Server=localhost;Database=RetrivalManagementDb;User Id=wbpoc;Password=sql@tfs2008;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "RetrivalManagement": "Server=retrivaldb.database.windows.net;Database=retrivaldb;User Id=sysadmin;Password=Retrival@123;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
